k8s-rewrite/charts/media-stack/jackett/service.yaml
# Jackett Service
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: plex
spec:
  type: ClusterIP
  ports:
  - port: 9117
    targetPort: 9117
    name: http
  selector:
    app: jackett
