k8s-rewrite/charts/media-stack/jackett/ingress.yaml
# Jackett Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: plex
spec:
  rules:
  - host: jackett.branconet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              number: 9117
